Possible fix for scrollbar

--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -141,6 +141,7 @@
     }
     .date {
       margin-bottom: 0px;
+      overflow: hidden;
       i {
         display: block;
         float: left;
